tests/ui/parser/mod_file_with_path_attr.stderr
error: couldn't find file `$DIR/not_a_real_file.rs`
  --> $DIR/mod_file_with_path_attr.rs:4:1
   |
LL | mod m;
   | ^^^^^^

error: aborting due to 1 previous error

